GoalTracker/force-app/main/default/objects/Gift_Area__c/Gift_Area__c.object-meta.xml
<CustomObject>
    <label>Gift Area</label>
    <nameField>
        <label>Gift Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>