GoalTracker/force-app/main/default/objects/Gift_Area__c/fields/Background_Image_2__c.field-meta.xml
<CustomField>
    <fullName>Background_Image_2__c</fullName>
    <label>Background Image 2</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>