GoalTracker/force-app/main/default/objects/Gift_Area__c/fields/Logo__c.field-meta.xml
<CustomField>
    <fullName>Logo__c</fullName>
    <label>Logo</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>