GoalTracker/force-app/main/default/objects/Gift_Area__c/fields/Sub_Title__c.field-meta.xml
<CustomField>
    <fullName>Sub_Title__c</fullName>
    <label>Sub Title</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>