GoalTracker/force-app/main/default/objects/Gift_Area__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Gift_Page_Option__c</columns>
    <columns>NAME</columns>
    <columns>Order_Number__c</columns>
    <columns>Title__c</columns>
    <columns>Sub_Title__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>